dataset/local/tf_s3_cross_region_replication/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-source-bucket
      - type: aws_s3_bucket_replication_configuration
        values:
          bucket: my-source-bucket
          role: arn:aws:iam::123456789012:role/replication-role
          rule:
            - id: replicate-all
              status: Enabled
              destination:
                - bucket: arn:aws:s3:::my-destination-bucket
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-bad-source-bucket
