dataset/local/tf_s3_cross_region_replication/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enable-s3-cross-region-replication
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: enable-s3-cross-region-replication
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: enable-s3-cross-region-replication
    kind: Plan
    resources:
      - bad-plan
    result: fail
